<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.keshogroup.cartrader.controller.CartraderActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/autotrader"
        android:text="@string/app_name"
        android:textSize="40sp"/>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:background="@drawable/blue">

        <Button
            android:id="@+id/weatherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView2"
            android:layout_marginBottom="15dp"
            android:drawableRight="@drawable/sun"
            android:text="@string/weather"/>


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/weatherButton"
            android:layout_marginBottom="15dp"
            android:drawableRight="@drawable/button_blank"
            android:text="@string/sign_up"/>


        <Button
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/signUpButton"
            android:layout_marginBottom="15dp"
            android:drawableRight="@drawable/button_blank"
            android:text="@string/camera"/>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cameraButton"
            android:layout_marginBottom="15dp"
            android:drawableRight="@drawable/button_blank"
            android:text="@string/search"/>

        <Button
            android:id="@+id/dataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/searchButton"
            android:layout_marginBottom="15dp"
            android:drawableRight="@drawable/button_blank"
            android:text="@string/data"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView3"
            android:layout_marginTop="15dp"
            android:text="@string/great_day_for_shopping"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/signUpButton"
            android:layout_toLeftOf="@+id/weatherButton"
            android:text="@string/sign_up_for_new_car_notifications"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignTop="@+id/cameraButton"
            android:text="@string/sell_your_car_today"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/searchButton"
            android:layout_toLeftOf="@+id/weatherButton"
            android:text="@string/search_for_your_next_car"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView5"
            android:layout_alignTop="@+id/dataButton"
            android:text="@string/json_data"/>

    </RelativeLayout>

    <include
        layout="@layout/searchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:visibility="gone"/>

    <include
        layout="@layout/restlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:visibility="gone"/>

</RelativeLayout>